# hydrogen

./: .gitmodules  CMakeLists.txt
assets/shaders/: shader.frag  shader.vert
assets/shaders/base/: shader.frag
assets/shaders/base_light/: shader.frag  shader.vert
assets/shaders/billboard/: shader.frag  shader.vert
assets/shaders/directional_light/: shader.frag
assets/shaders/light/: shader.frag
assets/shaders/normal/: shader.frag  shader.vert
assets/shaders/skybox/: shader.vert
assets/shaders/spotlight_light/: shader.frag
src/: App.cpp  App.h  BuffersArray_AOS.cpp  BuffersArray_AOS.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  MyApp.cpp  MyApp.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  Timer.cpp  Timer.h  Vertex.h  Window.cpp  Window.h  main.cpp
src/Engine/: App.cpp  App.h  Application.cpp  Application.h  ApplicationData.h  BuffersArray_AOS.cpp  BuffersArray_AOS.h  Camera.cpp  Camera.h  EngineConfig.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  Timer.cpp  Timer.h  Vertex.h  Window.cpp  Window.h  WindowData.h  include.h
src/Engine/Core/: Base.h  KeyCodes.h  MouseCode.h
src/Engine/Event/: Event.h  KeyEvent.h  MouseEvent.h
src/Engine/Systems/: BillboardRenderSystem.h  IRenderSystem.cpp  IRenderSystem.h  ImguiRenderSystem.cpp  ImguiRenderSystem.h  SkyBoxRenderSystem.cpp  SkyBoxRenderSystem.h
src/Engine/systems/: BaseModelRenderSystem.cpp  BaseModelRenderSystem.h  BillboardRenderSystem.cpp
